syntax = "proto3";
option java_multiple_files = true;
package com.food.grpc.payment;

service PaymentService {
  rpc getPayment(PaymentRequest) returns (PaymentResponse);
}

message PaymentRequest {
  int64 stockId = 1;
}

message PaymentResponse {
  int64 paymentId = 1;
  double amountAvailable = 2;
  int64 status = 3;
}
